【按键精灵 - 命令库】多线程v1.4

--- a/qmacro.ini
+++ b/qmacro.ini
@@ -13,3 +13,39 @@ Name2=»­Í¼
 Path2=$SystemPath\mspaint.exe
 Name3=½Å±¾¶Ô±È
 Path3=$EXEPath\tools\Merge\bin\TortoiseMerge.exe
+[BeginnerHelpShow]
+HelpShowState=1
+[PatchUpdate]
+PatchCheck=0
+[NewMacro]
+NewMacroType=0
+[Debug]
+LastWatchVarList=
+[MacroAttach]
+MacroAttachViewMode=0
+[CEditMacroMainFrameLastPos]
+Maximize=1
+Left=0
+Top=0
+Right=1366
+Bottom=728
+[MacroEditor]
+ScriptLineRecomposeTips=1
+[CMainFrameLastPos]
+Maximize=0
+Left=412
+Top=58
+Right=1252
+Bottom=658
+[MacroMgr]
+ActiveTab=0
+[General]
+EndHotkey=123
+EndHotkeyMod=0
+[SysHokey]
+StepInHotkey=145
+StepInHotkeyMod=0
+StepOverHotkey=145
+StepOverHotkeyMod=4
+[Backup]
+LastRevision=2
